# bmp_fb

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build_and_run.sh  gen_shader_headers.py
examples/audio/: CMakeLists.txt  app.cpp  app.hpp
examples/basic/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
examples/kbd/: CMakeLists.txt  main.cpp
res/shaders/: bmp_fb.frag.glsl  bmp_fb.vert.glsl
src/: CMakeLists.txt  application.cpp  application.hpp  audio.cpp  audio.hpp  bitmap_fb.cpp  bitmap_fb.hpp  entrypoint.cpp  imgui_gl.cpp  imgui_gl.hpp  main.cpp  resizable_target.cpp  resizable_target.hpp  sdl_gl.cpp  sdl_gl.hpp  shader_compiler.cpp  shader_linker.cpp  shader_linker.hpp
src/BFGe/: BFGe.cpp  BFGe.hpp  application.cpp  application.hpp  audio.cpp  bitmap_fb.cpp  bitmap_fb.hpp  entrypoint.cpp  entrypoint.hpp  imgui_gl.cpp  logger.cpp  logger.hpp  logging.cpp  logging.hpp  sdl_gl.cpp  shader_compiler.cpp
